@@ -532,7 +532,14 @@ t_string& game_state::get_variable(const std::string& key)
 const t_string& game_state::get_variable_const(const std::string& key) const
 {
 	variable_info to_get(key, false, variable_info::TYPE_SCALAR);
-	if(!to_get.is_valid) return temporaries[key];
+	if(!to_get.is_valid) {
+			t_string& to_return = temporaries[key];
+			if(key.size() > 7 and key.substr(key.size()-7)==".length") {
+				// length is a special attribute, so guarantee its correctness
+				to_return = "0";
+			}
+			return to_return;
+	}
 	return to_get.as_scalar();
 }
 
